--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.demo-layout-transparent {
+  background: url('https://images.pexels.com/photos/1054289/pexels-photo-1054289.jpeg') center / cover;
+}
+.demo-layout-transparent .mdl-layout__header,
+.demo-layout-transparent .mdl-layout__drawer-button {
+  /* This background is dark, so we set text to white. Use 87% black instead if
+     your background is light. */
+  color: white;
+}
+
 .App {
   text-align: center;
 }
